kubernetes/apps/longhorn/longhorn/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn
  annotations:
      external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
      external-dns.home.arpa/enabled: "true"
      external-dns.alpha.kubernetes.io/target: "192.168.2.174"
      cert-manager.io/cluster-issuer: letsencrypt-production
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
      hajimari.io/appName: "traefik"
      hajimari.io/enable: "true"
      hajimari.io/icon: "web"

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.ninjawombat.space`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: "longhorn-ninjawombat.space"
